TASK-51: Fix config.json requeriments and refactor main function.
- Changed required name from url to sitename in the agent config file.
- Refactor main fuction suggedted from sonar at maintainability as code smell duplications.

--- a/etc/webalert-agent/config.json
+++ b/etc/webalert-agent/config.json
@@ -2,5 +2,5 @@
   "email": "your_user",
   "password": "your_password",
   "api_uri": "https://api.webalert.digital",
-  "siteName": ["https://yoursite.com","https://yoursecond.com"]
+  "siteName": ["mysite1","mysite2"]
 }
